[metadata]
name = pymal
version = attr: pymal.__version__
url = https://github.com/asgardkm/pymal
description = A Python library for the MyAnimeList API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mal, myanimelist, python
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    requests

[options.extras_require]
dev =
    bandit
    black
    pylint
    pyflakes
    pytest

[options.package_data]
* = *.md, *.txt

[options.packages.find]
exclude =
    tests/*
